# Helium

./: .gitignore  .swp  CMakeLists.txt  LICENSE.txt  README.md  format.txt  out.txt  passes.txt
batchfiles/: build_and_run.bat  out.txt  (+4 more)
postprocess/buildex/: .gitignore  CMakeLists.txt  Makefile  README.md  run.bat  run_buildex_specific.bat  run_expression.bat  run_specific.bat  select_and_build.bat  src_structure.txt
postprocess/buildex/build32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buildex.sln  buildex.vcxproj  buildex.vcxproj.filters  cmake_install.cmake
postprocess/buildex/build32/buildex.dir/Debug/buildex.tlog/: buildex.lastbuildstate  cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
postprocess/buildex/helpers/: .gitignore  Makefile  helperfilegen.cpp  reverse.exe.stackdump
postprocess/buildex/include/: .gitignore  build_abs_tree.h  build_mem_dump.h  build_mem_instrace.h  build_mem_layout.h  build_tree.h  canonicalize (WIN-SF0UEES3RPL's conflicted copy 2014-08-30).h  canonicalize.h  defines.h  exbuild.h  expression_tree.h  extract_memregions.h  fileparser.h  forward_analysis.h  imageparser.h  memregions.h  node.h  nodes.h  plainprint.h  print.h  print_common.h  print_dot.h  print_halide.h  print_regs.h  tree_transformations.h
postprocess/buildex/include/analysis/: conditional_analysis.h  indirection_analysis.h  preprocess.h  staticinfo.h  tree_analysis.h  x86_analysis.h
postprocess/buildex/include/halide/: halide.h
postprocess/buildex/include/memory/: memanalysis.h  memdump.h  meminstrace.h  memregions.h
postprocess/buildex/include/old/: extract_memregions.h  memregions.h  print_dot.h  print_halide.h  tree_transformations.h
postprocess/buildex/include/trees/: nodes.h  trees.h
postprocess/buildex/include/utility/: defines.h  fileparser.h  print_helper.h  print_ops.h  sympy.h
postprocess/buildex/src/: .gitignore  build_abs_tree.cpp  build_mem_dump.cpp  build_mem_instrace.cpp  build_mem_layout.cpp  build_tree.cpp  canonicalize.cpp  exbuild.cpp  expression_tree.cpp  extract_memregions.cpp  fileparser.cpp  forward_analysis.cpp  imageparser.cpp  main.cpp  memregions.cpp  node.cpp  plainprint.cpp  print.cpp  print_common.cpp  print_dot.cpp  print_halide.cpp  python_test.py  reverse.cpp  sympy.cpp  tree_transformations.cpp
postprocess/buildex/src/analysis/: README.md  conditional_analysis.cpp  indirection_analysis.cpp  preprocess.cpp  staticinfo.cpp  tree_analysis.cpp  x86_analysis.cpp
postprocess/buildex/src/deleted/: deleted.cpp
postprocess/buildex/src/halide/: halide.cpp
postprocess/buildex/src/main/: main.cpp
postprocess/buildex/src/memory/: memanalysis.cpp  memdump.cpp  meminstrace.cpp  memregions.cpp
postprocess/buildex/src/trees/: abs_node.cpp  abs_tree.cpp  comp_abs_node.cpp  comp_abs_tree.cpp  conc_node.cpp  conc_tree.cpp  node.cpp  tree.cpp
postprocess/buildex/src/utility/: fileparser.cpp  print_helper.cpp
postprocess/buildex/tests/src/: test_vector.cpp
postprocess/buildex/utility/: .gitignore  run.bat
preprocess/code_diff/: .gitignore  CMakeLists.txt
preprocess/code_diff/build32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  code_diff.vcxproj  code_diff.vcxproj.filters  code_diff_project.sln
preprocess/code_diff/build32/code_diff.dir/Debug/code_diff.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
preprocess/code_diff/src/: diff.cpp
preprocess/code_diff/utility/: clean.bat  run.bat
tests/c_tests/: .gitignore  CMakeLists.txt  README.txt  arith.cpp  calls.cpp  data_parallel.cpp  ifelse.cpp  image_manipulation.cpp  loop_1.cpp  loop_1_filter.txt  loop_2_filter.txt  loop_red.cpp  out.txt  select_and_build.bat
tests/c_tests/filter_files/: data_parallel_filter.txt
tests/c_tests/include_image/: image_manipulation.h
tests/c_tests/src_basic/: convoluted.cpp  data_parallel.cpp  do_nothing.cpp  ifelse.cpp  producer_consumer.cpp  recursive.cpp
tests/c_tests/src_image/: blur.cpp  image_manipulation.cpp  invert.cpp
tests/c_tests/utility/: build.bat  clean.bat  run.bat
tests/halide_tests/: .gitignore  CMakeLists.txt  halide_1.cpp  select_and_build.bat  test.bat  test.cpp
tests/halide_tests/build32/: ALL_BUILD.sdf  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  halide_blur.vcxproj  halide_blur.vcxproj.filters  halide_blur_test.vcxproj  halide_blur_test.vcxproj.filters  halide_input_dep.vcxproj  halide_input_dep.vcxproj.filters  halide_input_dep_test.vcxproj  halide_input_dep_test.vcxproj.filters  halide_rotate.vcxproj  halide_rotate.vcxproj.filters  halide_rotate_test.vcxproj  halide_rotate_test.vcxproj.filters  halide_tests.sln
tests/halide_tests/build32/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
tests/halide_tests/srcs_halide/: halide_bilateral.cpp  halide_blur.cpp  halide_blur_hvscan.cpp  halide_blur_naive.cpp  halide_heq.cpp  halide_input_dep.cpp  halide_misc.cpp  halide_rotate.cpp  halide_scale.cpp  halide_snakes.cpp  halide_threshold.cpp  halide_warp.cpp  halide_weights.cpp  halide_wrap.cpp
tests/halide_tests/srcs_tests/: halide_bilateral_jit.cpp  halide_bilateral_test.cpp  halide_blur_hvscan_test.cpp  halide_blur_naive_test.cpp  halide_blur_test.cpp  halide_heq_jit.cpp  halide_heq_test.cpp  halide_input_dep_test.cpp  halide_misc_jit.cpp  halide_misc_test.cpp  halide_rotate_test.cpp  halide_scale_test.cpp  halide_snakes_test.cpp  halide_threshold_test.cpp  halide_warp_test.cpp  halide_weights_test.cpp  halide_wrap_test.cpp  image_io.h  image_manipulation.h  image_manipulation_halide.h  static_image.h
tests/halide_tests/utility/: build.bat  clean.bat  run_tests.bat
(+254 files in other folders)
